# linphone-desktop-all

./: README.md
linphone-sdk/bcmatroska2/: BcMatroska2Config.cmake.in  CMakeLists.txt  config.h.cmake
linphone-sdk/bcmatroska2/corec/corec/: CMakeLists.txt
linphone-sdk/bcmatroska2/corec/corec/helpers/charconvert/: charconvert_linux.c  charconvert_win32.c
linphone-sdk/bcmatroska2/corec/corec/helpers/date/: date_win32.c
linphone-sdk/bcmatroska2/corec/corec/helpers/file/: file_libc.c  file_win32.c
linphone-sdk/bcmatroska2/corec/corec/helpers/parser/: parser2.c
linphone-sdk/bcmatroska2/corec/corec/helpers/system/: ccsystem_win32.c
linphone-sdk/bcmatroska2/corec/corec/str/: str_win32.c
linphone-sdk/bcmatroska2/libebml2/: CMakeLists.txt  ebmlmaster.c  ebmlstring.c
linphone-sdk/bcmatroska2/libmatroska2/: CMakeLists.txt
linphone-sdk/bctoolbox/cmake/: BcToolboxCMakeUtils.cmake
linphone-sdk/cmake-builder/toolchains/: toolchain-ios-i386.cmake
linphone-sdk/liblinphone/src/db/: main-db-chat-message-key.h
linphone-sdk/liblinphone/tester/rcfiles/: pauline_lime_x3dh_rc
linphone-sdk/mssilk/: Android.mk  CMakeLists.txt  Makefile.am  NEWS  README  autogen.sh  configure.ac  mssilk.iss.in  silk_dec.c  silk_enc.c
linphone-sdk/mssilk/sdk/: Makefile.am
linphone-sdk/mssilk/sdk/SILK_SDK_SRC_v1.0.9/SILK_SDK_SRC_ARM_v1.0.9/src/: SKP_Silk_dec_API.c
linphone-sdk/mssilk/sdk/SILK_SDK_SRC_v1.0.9/SILK_SDK_SRC_FIX_v1.0.9/src/: SKP_Silk_dec_API.c
linphone-sdk/mssilk/sdk/known_checksums/: SILK_SDK_SRC_v1.0.9.zip.md5
linphone-sdk/mswebrtc/webrtc/webrtc/base/: checks.cc
linphone-sdk/mswinrtvid/: CMakeLists.txt  IVideoDispatcher.h  IVideoRenderer.h  LinkList.h  MSWinRTVideo.vcxproj  MediaEngineNotify.cpp  MediaEngineNotify.h  MediaStreamSource.cpp  MediaStreamSource.h  README  RemoteHandle.cpp  RemoteHandle.h  Renderer.cpp  Renderer.h  SchemeHandler.cpp  SchemeHandler.h  ScopeLock.cpp  ScopeLock.h  SharedData.h  SwapChainPanelSource.cpp  SwapChainPanelSource.h  VideoBuffer.h  VideoRenderer.cs  VideoStreamSource.cs  mswinrtbackgrounddis.cpp  mswinrtbackgrounddis.h  mswinrtcap.cpp  mswinrtcap.h  mswinrtdis.cpp  mswinrtdis.h  mswinrtmediasink.cpp  mswinrtmediasink.h  mswinrtvid.cpp  mswinrtvid.h
linphone-sdk/mswinrtvid/mswinrtvid/: mswinrtvid.sln  mswinrtvid.vcxproj
